--- a/source/root/etc/init/aminer.conf
+++ b/source/root/etc/init/aminer.conf
@@ -6,5 +6,7 @@ description "aminer startup script"
 # Start immediately when filesystem is available.
 start on filesystem
 stop on runlevel [06]
+# AMiner will fork twice when in background mode.
+expect daemon
 respawn
 exec /usr/lib/aminer/AMiner
