--- a/source/debian/control
+++ b/source/debian/control
@@ -2,7 +2,7 @@ Source: logdata-anomaly-miner
 Section: misc
 Priority: extra
 Maintainer: Roman Fiedler <roman.fiedler@ait.ac.at>
-Build-Depends: debhelper (>= 9.0.0)
+Build-Depends: debhelper (>= 9.0.0), docbook-xsl, docbook-xml, xsltproc
 Standards-Version: 3.9.6
 Homepage: https://launchpad.net/logdata-anomaly-miner/
 Vcs-Git: git://git.launchpad.net/logdata-anomaly-miner
