--- a/source/root/etc/init/aminer.conf
+++ b/source/root/etc/init/aminer.conf
@@ -3,8 +3,12 @@
 
 description "aminer startup script"
 
+# Enable AMiner autostart only when you have tested your configuration
+# and know, what you are doing. See /usr/share/doc/aminer/Readme.txt
+# section "Running as a Service".
+
 # Start immediately when filesystem is available.
-start on filesystem
+# DISABLED: start on filesystem
 stop on runlevel [06]
 # AMiner will fork twice when in background mode.
 expect daemon
