More verbose comment in config template/example file.

--- a/source/root/etc/aminer/config.py.template
+++ b/source/root/etc/aminer/config.py.template
@@ -65,7 +65,9 @@ configProperties['MailAlerting.TargetAddress']='root@localhost'
 
 # Add your ruleset here:
 
-# Define the pipeline for parsing the log data:
+# Define the function to create pipeline for parsing the log data.
+# The function has to return a tuple containing a list of listeners
+# for RawAtoms and the list of components needing timer interrupts.
 def buildAnalysisPipeline(aminerConfig):
 # Build the parsing model first
   from aminer.parsing import FirstMatchModelElement
