--- a/source/debian/control
+++ b/source/debian/control
@@ -11,6 +11,7 @@ Vcs-Browser: https://bazaar.launchpad.net/~roman-fiedler/logdata-anomaly-miner/r
 Package: logdata-anomaly-miner
 Architecture: all
 Depends: python-tz, ${misc:Depends}
+Suggests: python-scipy
 Description: logdata-anomaly-miner allows to create log analysis
   pipelines to analyze log data streams and detect violations
   or anomalies in it. It can be run from console, as daemon with
