--- a/source/root/etc/init/aminer.conf
+++ b/source/root/etc/init/aminer.conf
@@ -13,4 +13,4 @@ stop on runlevel [06]
 # AMiner will fork twice when in background mode.
 expect daemon
 respawn
-exec /usr/lib/aminer/AMiner
+exec /usr/lib/logdata-anomaly-miner/AMiner
