--- a/source/root/lib/systemd/system/aminer.service
+++ b/source/root/lib/systemd/system/aminer.service
@@ -3,8 +3,8 @@ Description=AMiner log data mining server
 Documentation=man:AMiner(1)
 
 [Service]
-Type=forking
-ExecStart=/usr/lib/logdata-anomaly-miner/AMiner
+Type=simple
+ExecStart=/usr/lib/logdata-anomaly-miner/AMiner --Foreground
 KillMode=control-group
 # Write everything to /dev/null: if AMiner is misconfigured, it
 # may detect anonamies in its own log data, thus creating a logging
