--- a/source/root/etc/aminer/config.py.template
+++ b/source/root/etc/aminer/config.py.template
@@ -1,23 +1,25 @@
 # This is a template for the "aminer" logfile miner tool. Copy
 # it to "config.py" and define your ruleset.
 
-configProperties={}
+configProperties = {}
 
-# Define the list of log files to read from: the files named here
-# do not need to exist when aminer is started. This will just
-# result in a warning. However if they exist, they have to be
-# readable by the aminer process!
-configProperties['LogFileList']=['/var/log/auth.log', '/var/log/syslog']
+# Define the list of log resources to read from: the resources
+# named here do not need to exist when aminer is started. This
+# will just result in a warning. However if they exist, they have
+# to be readable by the aminer process! Supported types are:
+# * file://[path]: Read data from file, reopen it after rollover
+# * unix://[path]: Open the path as UNIX local socket for reading
+configProperties['LogResourceList'] = ['file:///var/log/auth.log', 'file:///var/log/syslog']
 
 # Define the uid/gid of the process that runs the calculation
 # after opening the log files:
-configProperties['AMinerUser']='aminer'
-configProperties['AMinerGroup']='aminer'
+configProperties['AMinerUser'] = 'aminer'
+configProperties['AMinerGroup'] = 'aminer'
 
 # Define the path, where aminer will listen for incoming remote
 # control connections. When missing, no remote control socket
 # will be created.
-# configProperties['RemoteControlSocket']='/var/run/aminer-remote.socket'
+# configProperties['RemoteControlSocket'] = '/var/run/aminer-remote.socket'
 
 # Read the analyis from this file. That part of configuration
 # is separated from the main configuration so that it can be loaded
@@ -25,7 +27,7 @@ configProperties['AMinerGroup']='aminer'
 # interpreted relatively to the main configuration file (this
 # file). When empty, this configuration has to contain the configuration
 # for the child also.
-# configProperties['AnalysisConfigFile']='analysis.py'
+# configProperties['AnalysisConfigFile'] = 'analysis.py'
 
 
 # Read and store information to be used between multiple invocations
@@ -33,55 +35,56 @@ configProperties['AMinerGroup']='aminer'
 # to the 'AMinerUser' but not group/world readable. On violation,
 # AMiner will refuse to start. When undefined, '/var/lib/aminer'
 # is used.
-# configProperties['Core.PersistenceDir']='/var/lib/aminer'
+# configProperties['Core.PersistenceDir'] = '/var/lib/aminer'
 
 # Define a target e-mail address to send alerts to. When undefined,
 # no e-mail notification hooks are added.
-configProperties['MailAlerting.TargetAddress']='root@localhost'
+configProperties['MailAlerting.TargetAddress'] = 'root@localhost'
 # Sender address of e-mail alerts. When undefined, "sendmail"
 # implementation on host will decide, which sender address should
 # be used.
-# configProperties['MailAlerting.FromAddress']='root@localhost'
+# configProperties['MailAlerting.FromAddress'] = 'root@localhost'
 # Define, which text should be prepended to the standard aminer
 # subject. Defaults to "AMiner Alerts:"
-# configProperties['MailAlerting.SubjectPrefix']='AMiner Alerts:'
+# configProperties['MailAlerting.SubjectPrefix'] = 'AMiner Alerts:'
 # Define a grace time after startup before aminer will react to
 # an event and send the first alert e-mail. Defaults to 0 (any
 # event can immediately trigger alerting).
-# configProperties['MailAlerting.AlertGraceTime']=0
+# configProperties['MailAlerting.AlertGraceTime'] = 0
 # Define how many seconds to wait after a first event triggered
 # the alerting procedure before really sending out the e-mail.
 # In that timespan, events are collected and will be sent all
 # using a single e-mail. Defaults to 10 seconds.
-# configProperties['MailAlerting.EventCollectTime']=10
+# configProperties['MailAlerting.EventCollectTime'] = 10
 # Define the minimum time between two alert e-mails in seconds
 # to avoid spamming. All events during this timespan are collected
 # and sent out with the next report. Defaults to 600 seconds.
-# configProperties['MailAlerting.MinAlertGap']=600
+# configProperties['MailAlerting.MinAlertGap'] = 600
 # Define the maximum time between two alert e-mails in seconds.
 # When undefined this defaults to "MailAlerting.MinAlertGap".
 # Otherwise this will activate an exponential backoff to reduce
 # messages during permanent error states by increasing the alert
 # gap by 50% when more alert-worthy events were recorded while
 # the previous gap time was not yet elapsed.
-# configProperties['MailAlerting.MaxAlertGap']=600
+# configProperties['MailAlerting.MaxAlertGap'] = 600
 # Define how many events should be included in one alert mail
 # at most. This defaults to 1000
-# configProperties['MailAlerting.MaxEventsPerMessage']=1000
+# configProperties['MailAlerting.MaxEventsPerMessage'] = 1000
 
 
 # Add your ruleset here:
 
-# Define the function to create pipeline for parsing the log data.
-# It has also to define an AtomizerFactory to instruct AMiner
-# how to process incoming data streams to create log atoms from
-# them.
 def buildAnalysisPipeline(analysisContext):
+  """Define the function to create pipeline for parsing the log 
+  data. It has also to define an AtomizerFactory to instruct AMiner
+  how to process incoming data streams to create log atoms from
+  them."""
+
 # Build the parsing model:
   from aminer.parsing import FirstMatchModelElement
   from aminer.parsing import SequenceModelElement
 
-  serviceChildren=[]
+  serviceChildren = []
 
 # import AudispdParsingModel
 # serviceChildren.append(AudispdParsingModel.getModel())
@@ -105,9 +108,9 @@ def buildAnalysisPipeline(analysisContext):
 # serviceChildren.append(UlogdParsingModel.getModel())
 
   import SyslogPreambleModel
-  syslogPreambleModel=SyslogPreambleModel.getModel()
+  syslogPreambleModel = SyslogPreambleModel.getModel()
 
-  parsingModel=SequenceModelElement('model', [
+  parsingModel = SequenceModelElement('model', [
       syslogPreambleModel,
       FirstMatchModelElement('services', serviceChildren)])
 
@@ -117,23 +120,24 @@ def buildAnalysisPipeline(analysisContext):
 # Create all global handler lists here and append the real handlers
 # later on.
 # Use this filter to distribute all atoms to the analysis handlers.
-  atomFilter=AtomFilters.SubhandlerFilter(None)
-  anomalyEventHandlers=[]
+  atomFilter = AtomFilters.SubhandlerFilter(None)
+  anomalyEventHandlers = []
 
 # Now define the AtomizerFactory using the model. A simple line
 # based one is usually sufficient.
   from aminer.input import SimpleByteStreamLineAtomizerFactory
-  analysisContext.atomizerFactory=SimpleByteStreamLineAtomizerFactory(
+  analysisContext.atomizerFactory = SimpleByteStreamLineAtomizerFactory(
       parsingModel, [atomFilter], anomalyEventHandlers,
       defaultTimestampPath='/model/syslog/time')
 
 # Just report all unparsed atoms to the event handlers.
   from aminer.input import SimpleUnparsedAtomHandler
-  atomFilter.addHandler(SimpleUnparsedAtomHandler(anomalyEventHandlers),
+  atomFilter.addHandler(
+      SimpleUnparsedAtomHandler(anomalyEventHandlers),
       stopWhenHandledFlag=True)
 
   from aminer.analysis import NewMatchPathDetector
-  newMatchPathDetector=NewMatchPathDetector(
+  newMatchPathDetector = NewMatchPathDetector(
       analysisContext.aminerConfig, anomalyEventHandlers, autoIncludeFlag=True)
   analysisContext.registerComponent(newMatchPathDetector, componentName=None)
   atomFilter.addHandler(newMatchPathDetector)
@@ -143,9 +147,10 @@ def buildAnalysisPipeline(analysisContext):
   from aminer.events import DefaultMailNotificationEventHandler
   if analysisContext.aminerConfig.configProperties.has_key(
       DefaultMailNotificationEventHandler.CONFIG_KEY_MAIL_TARGET_ADDRESS):
-    mailNotificationHandler=DefaultMailNotificationEventHandler(analysisContext.aminerConfig)
-    analysisContext.registerComponent(mailNotificationHandler,
-        componentName=None)
+    mailNotificationHandler = DefaultMailNotificationEventHandler(
+        analysisContext.aminerConfig)
+    analysisContext.registerComponent(
+        mailNotificationHandler, componentName=None)
     anomalyEventHandlers.append(mailNotificationHandler)
 
 # Add stdout stream printing for debugging, tuning.
