--- a/source/debian/control
+++ b/source/debian/control
@@ -1,6 +1,6 @@
 Source: logdata-anomaly-miner
-Section: misc
-Priority: extra
+Section: admin
+Priority: optional
 Maintainer: Roman Fiedler <roman.fiedler@ait.ac.at>
 Build-Depends: debhelper (>= 9.0.0), dh-python, dh-systemd, docbook-xsl, docbook-xml, python-all, xsltproc
 Standards-Version: 3.9.8
