--- a/source/debian/rules
+++ b/source/debian/rules
@@ -5,7 +5,7 @@
 # export DH_VERBOSE=1
 
 %:
-	dh $@ --with=python3,systemd
+	dh $@ --with=python3
 
 override_dh_auto_build:
 	xsltproc --nonet \
@@ -21,5 +21,5 @@ override_dh_auto_build:
 # Do not attempt to add aminer.service to autostart if user does
 # not want to have it running explicitely. See "Running as a Service"
 # from /usr/share/doc/aminer/Readme.txt.gz for more information.
-override_dh_systemd_enable:
-	dh_systemd_enable --no-enable
+override_dh_installsystemd:
+	dh_installsystemd --no-enable
