--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ debian:
         script:
                 - pwd
                 - ls -l
-#                - ansible-playbook /opt/ansible/playbook.yml
+                - ansible-playbook /opt/ansible/playbook.yml
 
 ubuntu:
         image: git-service.ait.ac.at:8010/ict-caiscluster/logdata-anomaly-miner/aminer-ubuntu
@@ -12,4 +12,4 @@ ubuntu:
         script:
                 - pwd
                 - ls -l
-#                - ansible-playbook /opt/ansible/playbook.yml
+                - ansible-playbook /opt/ansible/playbook.yml
