--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,3 +13,4 @@ ubuntu:
                 - pwd
                 - ls -l
                 - ansible-playbook /opt/ansible/playbook.yml
+                - git clone https://git-service.ait.ac.at/ict-caiscluster/aecid-testsuite.git
