added deploy token of aecid-cli

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,4 +13,4 @@ ubuntu:
                 - pwd
                 - ls -l
                 - ansible-playbook /opt/ansible/playbook.yml
-                - git clone https://git-service.ait.ac.at/ict-caiscluster/aecid-testsuite.git
+                - git clone https://gitlab+deploy-token-aecidtestsuite:vu18Eo6k7xfA22vPvorx@git-service.ait.ac.at/ict-caiscluster/aecid-testsuite.git
