implemented EventData for TimeCorrelationViolationDetector and TimestampsUnsortedDetector.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,7 @@ ubuntu:
         
         before_script:
                 - pip3 install pytz
+                - pip3 install scipy
                 - apt install sendmail -y
                 - apt install language-pack-de -y
         
