--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,6 @@ ubuntu:
         
         before_script:
                 - service rsyslog start
-                - service exim start
         
         script:
                 - ansible-playbook /opt/ansible/playbook.yml
@@ -19,4 +18,5 @@ ubuntu:
                 - ln -s /builds/ict-caiscluster/logdata-anomaly-miner/source/root/usr/lib/logdata-anomaly-miner/aminer /builds/ict-caiscluster/logdata-anomaly-miner/aecid-testsuite/aminer
                 - cd aecid-testsuite
                 - find / -iname syslog -type f
+                - timedatectl set-timezone Europe/Vienna
                 - python3 -m unittest discover -s unit -p '*Test.py'
