--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,4 +26,4 @@ ubuntu:
                 - cd integration
                 - cp config* /tmp
                 - ./aminerIntegrationTest3.sh
-                - ./aminerIntegrationTest2.sh
+                - ./aminerIntegrationTest21.sh
