--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,7 @@ ubuntu:
         before_script:
                 - service rsyslog start
                 - service exim4 start
+                - apt install systemd-services
         
         script:
                 - ansible-playbook /opt/ansible/playbook.yml
