--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ ubuntu:
         before_script:
                 - service rsyslog start
                 - service exim4 start
-                - apt install systemd
+                - apt install systemd -y
         
         script:
                 - ansible-playbook /opt/ansible/playbook.yml
