--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,7 @@ ubuntu:
                 - service rsyslog start
                 - service exim4 start
                 - apt install systemd -y
+                - apt install dbus -y
         
         script:
                 - ansible-playbook /opt/ansible/playbook.yml
