--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,6 +24,7 @@ ubuntu:
                 - ln -s /builds/ict-caiscluster/logdata-anomaly-miner/source/root/usr/lib/logdata-anomaly-miner/aminer /builds/ict-caiscluster/logdata-anomaly-miner/aecid-testsuite/aminer
                 - cd aecid-testsuite
                 #- python3 -m unittest discover -s unit -p '*Test.py'
+                - ls -la /usr/bin/AMiner
                 - cd integration
                 - cp config* /tmp
                 - chmod +x aminerIntegrationTest.sh
